--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,22 @@
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
-    
+    <div class="promo">
+        <header class="header">
+            <a class="header__logo" href="#">
+                LOGO
+            </a>
+
+            <div class="header__official">
+                Loremiusitus Iptumaris
+                <span>Carmin, Polar, Suunto</span>
+            </div>
+
+            <div class="header__contacts">
+                <a class="header__phone" href="tel:+5555555555">+5 555 555 555</a>
+                <button class="button"></button>
+            </div>
+        </header>
+    </div>
 </body>
 </html>
