Styled the benefits section

--- a/src/index.html
+++ b/src/index.html
@@ -55,5 +55,35 @@
             </div>
         </div>
     </div>
+    <div class="benefits">
+        <div class="container">
+            <h2 class="benefits__header">Lorem Benefits</h2>
+
+            <div class="benefits__items">
+                <div class="benefits__item">
+                    <img class="benefits__icon" src="icons/advantages/cup.png" alt="Cup">
+                    <div class="benefits__subheader">Lorem Iptumaris</div>
+                    <div class="benefits__descr">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Veniam nisi deserunt nihil libero? Necessitatibus consequatur vel quae 
+                        incidunt earum similique sint. 
+                        Vitae, omnis aliquid quod natus deserunt itaque eos voluptatibus.</div>
+                </div>
+                <div class="benefits__item">
+                    <img class="benefits__icon" src="icons/advantages/heart.png" alt="Heart">
+                    <div class="benefits__subheader">Lorem Iptumaris</div>
+                    <div class="benefits__descr">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Veniam nisi deserunt nihil libero? Necessitatibus consequatur vel quae 
+                        incidunt earum similique sint.</div>
+                </div>
+                <div class="benefits__item">
+                    <img class="benefits__icon" src="icons/advantages/shoe.png" alt="Shoe">
+                    <div class="benefits__subheader">Lorem Iptumaris</div>
+                    <div class="benefits__descr">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Veniam nisi deserunt nihil libero? Necessitatibus consequatur vel quae 
+                        incidunt. - <a class="benefits__anchor" href="">I LOVE RUNNING</a></div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
