Worked with the consultation section

--- a/src/index.html
+++ b/src/index.html
@@ -47,7 +47,7 @@
                     </div>
                 </div>
 
-                <button class="button button_main">Lorem Iptumaris</button>
+                <button class="button button_main button__promo">Lorem Iptumaris</button>
                 <div class="promo__link">
                     lar
                     <a href="#">GO AWAY</a>
@@ -57,7 +57,7 @@
     </div>
     <div class="benefits">
         <div class="container">
-            <h2 class="benefits__header">Lorem Benefits</h2>
+            <h2 class="title">Lorem Benefits</h2>
 
             <div class="benefits__items">
                 <div class="benefits__item">
@@ -83,6 +83,36 @@
                         incidunt. - <a class="benefits__anchor" href="">I LOVE RUNNING</a></div>
                 </div>
             </div>
+        </div>
+    </div>
+    <div class="consultation">
+        <div class="container">
+            <h2 class="title title_left">Lorem Iptumaris Goleira <br>
+                bo Tragaribus Lorem
+            </h2>
+            <div class="consultation__descr">
+                Lorem ipsum dolor sit amet consectetur <br>
+                and adipisicing elit natus volupt.
+            </div>
+            <form class="feed-form" action="#" method="POST">
+                <input class="feed-form__item" 
+                        name="name" 
+                        required 
+                        type="text" 
+                        placeholder="Ipsuratm Lorem">
+                <input class="feed-form__item" 
+                        name="phone" 
+                        required 
+                        type="number" 
+                        placeholder="Adipisicing elit">                
+                <input class="feed-form__item"  
+                        name="email" 
+                        required 
+                        type="email" 
+                        placeholder="Natus volupt">                
+
+                <button class="button button_main" type="submit">Necessitatibus consequatur</button>
+            </form>
         </div>
     </div>
 </body>
