Started working  with the carousel section

--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,13 @@
     <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/style.min.css">
+    <link rel="stylesheet" href="css/slick.css">
+
+    <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 </head>
 <body>
-    <div class="promo">
+    <section class="promo">
         <div class="container">
             <header class="header">
                 <a class="header__logo" href="#">
@@ -54,8 +58,8 @@
                 </div>
             </div>
         </div>
-    </div>
-    <div class="benefits">
+    </section>
+    <section class="benefits">
         <div class="container">
             <h2 class="title">Lorem Benefits</h2>
 
@@ -84,8 +88,8 @@
                 </div>
             </div>
         </div>
-    </div>
-    <div class="consultation">
+    </section>
+    <section class="consultation">
         <div class="container">
             <h2 class="title title_left">Lorem Iptumaris Goleira <br>
                 bo Tragaribus Lorem
@@ -114,6 +118,26 @@
                 <button class="button button_main" type="submit">Necessitatibus consequatur</button>
             </form>
         </div>
-    </div>
+    </section>
+
+    <section class="carousel">
+        <div class="container">
+            <div class="carousel__inner">
+                <div>
+                    <img src="img/slide_1.jpg" alt="First">
+                </div>
+                <div>
+                    <img src="img/slide_2.jpg" alt="Second">
+                </div>
+                <div>
+                    <img src="img/slide_3.jpg" alt="Third">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <script src="js/slick.min.js"></script>
+    <script src="js/blocks/carousel/carousel.js"></script>
+
 </body>
 </html>
