Worked with slider

--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,8 @@
     <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/style.min.css">
-    <link rel="stylesheet" href="css/slick.css">
 
-    <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-    <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/tiny-slider.css">
 </head>
 <body>
     <section class="promo">
@@ -133,11 +131,13 @@
                     <img src="img/slide_3.jpg" alt="Third">
                 </div>
             </div>
+            <button type="button" class="prev"><img src="icons/left.svg"></button>
+            <button type="button" class="next"><img src="icons/right.svg"></button>
         </div>
     </section>
 
-    <script src="js/slick.min.js"></script>
+    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
     <script src="js/blocks/carousel/carousel.js"></script>
-
 </body>
 </html>
