Started working with the catalog section

--- a/src/index.html
+++ b/src/index.html
@@ -135,7 +135,36 @@
             <button type="button" class="next"><img src="icons/right.svg"></button>
         </div>
     </section>
+    <section class="catalog">
+        <div class="container">
+            <h2 class="title">Lorem Ipsuratmisu</h2>
+            <ul class="catalog__tabs">
+                <li class="catalog__tab catalog__tab_active"><div>Lorem</div></li>
+                <li class="catalog__tab"><div>Possimus</div></li>
+                <li class="catalog__tab"><div>Dolore</div></li>
+            </ul>
 
+            <div class="catalog__content">
+                <div class="catalog-item">
+                    <img src="img/pulsometr.png" alt="Pulse" class="catalog-item__img">
+                    <div class="catalog-item__subtitle">Lorem Ipsuratmisu GIE</div>
+                    <div class="catalog-item__descr">Lorem ipsum dolor sit amet consectetur 
+                        adipisicing elit.</div>
+                    <a href="#" class="catalog-item__link">Consectetur</a>
+                    <hr>
+                    <div class="catalog-item__footer">
+                        <div class="catalog-item_prices">
+                            <div class="catalog-item__old-price">1200 ude.</div>
+                            <div class="catalog-item__price">1000 ude.</div>
+                        </div>
+                        <button class="button button_size_small">Lorem</button>
+                    </div>
+                </div>
+            </div>
+            <div class="catalog__content">2</div>
+            <div class="catalog__content">3</div>
+        </div>
+    </section>
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
     <script src="js/blocks/carousel/carousel.js"></script>
