Did a new section

--- a/src/index.html
+++ b/src/index.html
@@ -467,6 +467,54 @@
         </div>
     </section>
     
+    <section class="feedback">
+        <div class="container">
+            <h2 class="title">Lorem Iptumaris</h2>
+            <div class="feedback__clients">
+                <div class="feedback__client">
+                    <div class="feedback__img">
+                        <img src="img/feed_1.png" alt="Feedback 1">
+                    </div>
+                    <div class="feedback__content">
+                        <div class="feedback__name">Ipus Maris</div>
+                        <div class="feedback__details">2 maxime</div>
+                        <div class="feedback__descr">Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                            Architecto quidem ullam distinctio libero numquam dicta at ipsum consequuntur consectetur,<br><br>
+                            dolores necessitatibus. <br><br>
+                            Enim ipsam placeat officia velit, amet eaque nisi omnis?</div>
+                    </div>
+                </div>
+                <hr>
+                <div class="feedback__client">
+                    <div class="feedback__img">
+                        <img src="img/feed_2.png" alt="Feedback 1">
+                    </div>
+                    <div class="feedback__content">
+                        <div class="feedback__name">Dicta Maris</div>
+                        <div class="feedback__details">3 maxime</div>
+                        <div class="feedback__descr">Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                            Architecto quidem ullam distinctio libero numquam dicta at ipsum consequuntur consectetur,<br><br>
+                            dolores necessitatibus. <br><br>
+                            Enim ipsam placeat officia velit, amet eaque nisi omnis?</div>
+                    </div>
+                </div>
+                <hr>
+                <div class="feedback__client">
+                    <div class="feedback__img">
+                        <img src="img/feed_3.png" alt="Feedback 1">
+                    </div>
+                    <div class="feedback__content">
+                        <div class="feedback__name">Libero Numquam</div>
+                        <div class="feedback__details">1 maxime</div>
+                        <div class="feedback__descr">Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                            Architecto quidem ullam distinctio libero numquam dicta at ipsum consequuntur consectetur,<br><br>
+                            dolores necessitatibus. <br><br>
+                            Enim ipsam placeat officia velit, amet eaque nisi omnis?</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
     <script src="js/blocks/carousel/carousel.js"></script>
     <script src="js/blocks/catalog-item/catalog-item.js"></script>
