--- a/src/index.html
+++ b/src/index.html
@@ -515,10 +515,39 @@
             </div>
         </div>
     </section>
+
+    <footer class="footer">
+        <div class="footer__map"></div>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3118.658230545547!
+                2d-121.54217728482715!3d38.58771747961958!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1
+                !3m3!1m2!1s0x809ad41effc55555%3A0x9dc88fc821dea92e!
+                2sUSA%20Car%20Planet%20LLC!5e0!3m2!1sen!2s!4v1654199937224!5m2!1sen!2s" 
+                width="100%" 
+                height="630" 
+                style="border:0;" 
+                allowfullscreen="" 
+                loading="lazy" 
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+        <div class="footer__info">
+            <address class="footer__addr">Lorem, Legeng, d.32</address>
+            <a href="tel:555555555" class="footer__phone">+5 555-555-555</a>
+            <div class="footer__social">
+                <a href="#" class="footer__social-item">
+                    <img src="icons/facebook.svg" alt="facebook">
+                </a>
+                <a href="#" class="footer__social-item">
+                    <img src="icons/instagram.svg" alt="instagram">
+                </a>
+                <a href="#" class="footer__social-item">
+                    <img src="icons/pinterest.svg" alt="pinterest">
+                </a>
+            </div>  
+        </div>
+    </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
     <script src="js/blocks/carousel/carousel.js"></script>
     <script src="js/blocks/catalog-item/catalog-item.js"></script>
     <script src="js/blocks/catalog/__tab/tab.js"></script>
-
 </body>
 </html>
