--- a/src/index.html
+++ b/src/index.html
@@ -152,7 +152,7 @@
                             <div class="catalog-item__subtitle">Lorem Ipsuratmisu GIE</div>
                             <div class="catalog-item__descr">Lorem ipsum dolor sit amet amet consectetur 
                                 cing elit.</div>
-                            <a href="javascript:void(0);" class="catalog-item__link">Consectetur</a>
+                            <a href="javascript:void(0);" class="catalog-item__link catalog-item-toggle  ">Consectetur</a>
                         </div>
                         <ul class="catalog-item__list">
                             <li>
@@ -167,7 +167,7 @@
                             <li>
                                 Lorem ipsum totam quae itaque reprehenderit accusantium ipsa libero!
                             </li>
-                             <a href="javascript:void(0);" class="catalog-item__back">Back</a>
+                             <a href="javascript:void(0);" class=" catalog-item__back  catalog-item-toggle">Back</a>
                         </ul>
                     </div>
                     <hr>
@@ -187,7 +187,7 @@
                             <div class="catalog-item__subtitle">Lorem Ipsuratmisu GIE</div>
                             <div class="catalog-item__descr">Lorem ipsum dolor sit amet amet consectetur 
                                 cing elit.</div>
-                            <a href="javascript:void(0);" class="catalog-item__link">Consectetur</a>
+                            <a href="javascript:void(0);" class="catalog-item__link catalog-item-toggle  ">Consectetur</a>
                         </div>
                         <ul class="catalog-item__list">
                             <li>
@@ -202,7 +202,7 @@
                             <li>
                                 Lorem ipsum totam quae itaque reprehenderit accusantium ipsa libero!
                             </li>
-                            <a href="javascript:void(0);" class="catalog-item__back">Back</a>
+                            <a href="javascript:void(0);" class=" catalog-item__back  catalog-item-toggle">Back</a>
                         </ul>
                     </div>
                     <hr>
@@ -222,7 +222,7 @@
                             <div class="catalog-item__subtitle">Lorem Ipsuratmisu GIE</div>
                             <div class="catalog-item__descr">Lorem ipsum dolor sit amet amet consectetur 
                                 cing elit.</div>
-                            <a href="javascript:void(0);" class="catalog-item__link">Consectetur</a>
+                            <a href="javascript:void(0);" class="catalog-item__link catalog-item-toggle  ">Consectetur</a>
                         </div>
                         <ul class="catalog-item__list">
                             <li>
@@ -237,7 +237,7 @@
                             <li>
                                 Lorem ipsum totam quae itaque reprehenderit accusantium ipsa libero!
                             </li>
-                            <a href="javascript:void(0);" class="catalog-item__back">Back</a>
+                            <a href="javascript:void(0);" class=" catalog-item__back  catalog-item-toggle">Back</a>
                         </ul>
                     </div>
                     <hr>
@@ -257,7 +257,7 @@
                             <div class="catalog-item__subtitle">Lorem Ipsuratmisu GIE</div>
                             <div class="catalog-item__descr">Lorem ipsum dolor sit amet amet consectetur 
                                 cing elit.</div>
-                            <a href="javascript:void(0);" class="catalog-item__link">Consectetur</a>
+                            <a href="javascript:void(0);" class="catalog-item__link catalog-item-toggle  ">Consectetur</a>
                         </div>
                         <ul class="catalog-item__list">
                             <li>
@@ -272,43 +272,7 @@
                             <li>
                                 Lorem ipsum totam quae itaque reprehenderit accusantium ipsa libero!
                             </li>
-                            <a href="javascript:void(0);" class="catalog-item__back">Back</a>
-
-                        </ul>
-                    </div>
-                    <hr>
-                    <div class="catalog-item__footer">
-                        <div class="catalog-item_prices">
-                            <div class="catalog-item__old-price">1200 ude.</div>
-                            <div class="catalog-item__price">1000 ude.</div>
-                        </div>
-                        <button class="button button_size_small">Lorem</button>
-                    </div>
-                </div>
-
-                <div class="catalog-item catalog__catalog-item">
-                    <div class="catalog-item__wrapper">
-                        <div class="catalog-item__content catalog-item__content_active">
-                            <img src="img/pulsometr.png" alt="Pulse" class="catalog-item__img">
-                            <div class="catalog-item__subtitle">Lorem Ipsuratmisu GIE</div>
-                            <div class="catalog-item__descr">Lorem ipsum dolor sit amet amet consectetur 
-                                cing elit.</div>
-                            <a href="javascript:void(0);" class="catalog-item__link">Consectetur</a>
-                        </div>
-                        <ul class="catalog-item__list">
-                            <li>
-                                Lorem ipsum impedit incidunt iusto, totam quae itaque reprehenderit accusantium ipsa libero!
-                            </li>
-                            <li>
-                                Lorem ipsum impedit incidunt  reprehenderit accusantium ipsa libero!
-                            </li>
-                            <li>
-                                Lorem  iusto, totam quae itaque ipsa libero!
-                            </li>
-                            <li>
-                                Lorem ipsum totam quae itaque reprehenderit accusantium ipsa libero!
-                            </li>
-                            <a href="javascript:void(0);" class="catalog-item__back">Back</a>
+                            <a href="javascript:void(0);" class=" catalog-item__back  catalog-item-toggle">Back</a>
 
                         </ul>
                     </div>
@@ -329,7 +293,7 @@
                             <div class="catalog-item__subtitle">Lorem Ipsuratmisu GIE</div>
                             <div class="catalog-item__descr">Lorem ipsum dolor sit amet amet consectetur 
                                 cing elit.</div>
-                            <a href="javascript:void(0);" class="catalog-item__link">Consectetur</a>
+                            <a href="javascript:void(0);" class="catalog-item__link catalog-item-toggle  ">Consectetur</a>
                         </div>
                         <ul class="catalog-item__list">
                             <li>
@@ -344,7 +308,43 @@
                             <li>
                                 Lorem ipsum totam quae itaque reprehenderit accusantium ipsa libero!
                             </li>
-                            <a href="javascript:void(0);" class="catalog-item__back">Back</a>
+                            <a href="javascript:void(0);" class=" catalog-item__back  catalog-item-toggle">Back</a>
+
+                        </ul>
+                    </div>
+                    <hr>
+                    <div class="catalog-item__footer">
+                        <div class="catalog-item_prices">
+                            <div class="catalog-item__old-price">1200 ude.</div>
+                            <div class="catalog-item__price">1000 ude.</div>
+                        </div>
+                        <button class="button button_size_small">Lorem</button>
+                    </div>
+                </div>
+
+                <div class="catalog-item catalog__catalog-item">
+                    <div class="catalog-item__wrapper">
+                        <div class="catalog-item__content catalog-item__content_active">
+                            <img src="img/pulsometr.png" alt="Pulse" class="catalog-item__img">
+                            <div class="catalog-item__subtitle">Lorem Ipsuratmisu GIE</div>
+                            <div class="catalog-item__descr">Lorem ipsum dolor sit amet amet consectetur 
+                                cing elit.</div>
+                            <a href="javascript:void(0);" class="catalog-item__link catalog-item-toggle  ">Consectetur</a>
+                        </div>
+                        <ul class="catalog-item__list">
+                            <li>
+                                Lorem ipsum impedit incidunt iusto, totam quae itaque reprehenderit accusantium ipsa libero!
+                            </li>
+                            <li>
+                                Lorem ipsum impedit incidunt  reprehenderit accusantium ipsa libero!
+                            </li>
+                            <li>
+                                Lorem  iusto, totam quae itaque ipsa libero!
+                            </li>
+                            <li>
+                                Lorem ipsum totam quae itaque reprehenderit accusantium ipsa libero!
+                            </li>
+                            <a href="javascript:void(0);" class=" catalog-item__back  catalog-item-toggle">Back</a>
 
                         </ul>
                     </div>
@@ -366,7 +366,7 @@
                             <div class="catalog-item__subtitle">Lorem Ipsuratmisu GIE</div>
                             <div class="catalog-item__descr">Lorem ipsum dolor sit amet amet consectetur 
                                 cing elit.</div>
-                            <a href="javascript:void(0);" class="catalog-item__link">Consectetur</a>
+                            <a href="javascript:void(0);" class="catalog-item__link catalog-item-toggle  ">Consectetur</a>
                         </div>
                         <ul class="catalog-item__list">
                             <li>
@@ -381,7 +381,7 @@
                             <li>
                                 Lorem ipsum totam quae itaque reprehenderit accusantium ipsa libero!
                             </li>
-                            <a href="javascript:void(0);" class="catalog-item__back">Back</a>
+                            <a href="javascript:void(0);" class=" catalog-item__back  catalog-item-toggle">Back</a>
                         </ul>
                     </div>
                     <hr>
@@ -402,7 +402,7 @@
                             <div class="catalog-item__subtitle">Lorem Ipsuratmisu GIE</div>
                             <div class="catalog-item__descr">Lorem ipsum dolor sit amet amet consectetur 
                                 cing elit.</div>
-                            <a href="javascript:void(0);" class="catalog-item__link">Consectetur</a>
+                            <a href="javascript:void(0);" class="catalog-item__link catalog-item-toggle  ">Consectetur</a>
                         </div>
                         <ul class="catalog-item__list">
                             <li>
@@ -417,7 +417,7 @@
                             <li>
                                 Lorem ipsum totam quae itaque reprehenderit accusantium ipsa libero!
                             </li>
-                            <a href="javascript:void(0);" class="catalog-item__back">Back</a>
+                            <a href="javascript:void(0);" class=" catalog-item__back  catalog-item-toggle">Back</a>
                         </ul>
                     </div>
                     <hr>
@@ -436,7 +436,7 @@
                             <div class="catalog-item__subtitle">Lorem Ipsuratmisu GIE</div>
                             <div class="catalog-item__descr">Lorem ipsum dolor sit amet amet consectetur 
                                 cing elit.</div>
-                            <a href="javascript:void(0);" class="catalog-item__link">Consectetur</a>
+                            <a href="javascript:void(0);" class="catalog-item__link catalog-item-toggle  ">Consectetur</a>
                         </div>
                         <ul class="catalog-item__list">
                             <li>
@@ -451,7 +451,7 @@
                             <li>
                                 Lorem ipsum totam quae itaque reprehenderit accusantium ipsa libero!
                             </li>
-                            <a href="javascript:void(0);" class="catalog-item__back">Back</a>
+                            <a href="javascript:void(0);" class=" catalog-item__back  catalog-item-toggle">Back</a>
                         </ul>
                     </div>
                     <hr>
